--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-email/render": "^1.4.0",
     "@supabase/supabase-js": "^2.75.1",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^6.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
