--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "resend": "^6.2.0"
+    "resend": "^6.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
